<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="#DCCBCB"
    android:foregroundGravity="bottom"
    tools:context=".MainActivity"
    tools:layout_anchorGravity="clip_horizontal">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:focusable="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TopWrapper"
        app:layout_constraintVertical_bias="0.45"
        app:maxImageSize="40dp"
        app:shapeAppearance="@style/Widget.Material3.CircularProgressIndicator"
        app:srcCompat="@drawable/starnotfilled"
        tools:clickable="true" />

    <LinearLayout
        android:id="@+id/TopWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="true"
        android:clipToPadding="true"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.20">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Name"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fortnite" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_margin="20dp"
                android:gravity="bottom"
                android:shadowColor="#000000"
                android:shadowRadius="10"
                android:text="@string/Name"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="40sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                tools:autoSizeMinTextSize="5sp" />

        </FrameLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="30sp"
            android:layout_weight="0.30"
            android:baselineAligned="false"
            android:orientation="vertical">

            <TextView
                android:id="@+id/INFOTITLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/InfoTtl"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/INFO"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:text="@string/InfoCont"
                android:textColor="#3E3E3E"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:layout_weight="0.25"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/WHERE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/WhereTtl"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/ESTABLISHED"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/EstablishedTtl"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TYPE"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/TypeTtl"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/WHEREInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/WhereCont"
                    android:textColor="#3E3E3E" />

                <TextView
                    android:id="@+id/ESTABLISHEDInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/EstCont"
                    android:textColor="#3E3E3E" />

                <TextView
                    android:id="@+id/TYPEInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/TypeCont"
                    android:textColor="#3E3E3E" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>